# master-thesis-anomaly-detection

./: .gitignore
data/: Gesammelte_Metriken.csv  Reported_Model_Dataset_Stats.xlsx
experiment/evaluation/: metric_evaluation.csv  plot-results.py  pyproject.toml  test_results.csv  test_results_wrong_size.csv  wrong_size_evaluation.csv
experiment/notebooks/: CFA.ipynb  DRAEM.ipynb  Dinomaly.ipynb  EfficientAd.ipynb  Fastflow.ipynb  UniNet.ipynb
experiment/thesis_library/: pyproject.toml  requirements.txt  test.py  try_metrics.py  try_model.py
experiment/thesis_library/thesis_library/: LimitedImageVisualizer.py  __init__.py  util.py
experiment/thesis_library/thesis_library/data/: miad_datamodule.py  miad_dataset.py
experiment/thesis_library/thesis_library/metrics/: AurocLimitedFPR.py  EfficientPRO.py  IoU.py  LimitedMetrics.py  ThresholdedF1Max.py  image.py  pixel.py  util.py
images/: Memory_Bank.drawio  Methoden_Übersicht.drawio  One_Class_Klassifikation.drawio  Probabilistisch.drawio  Rekonstruktion.drawio  Supervision.drawio
results/: extract_correct_results.sh  extract_wrong_sized_results.sh
