[project]
name = "evaluation"
version = "0.0.1"
description = "Evaluation code for results"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2,<3.0.0",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas>=2.3.1,<3.0.0",
    "matplotlib>=3.10.5,<4.0.0",
    "scipy (>=1.16.1,<2.0.0)",
    "cairocffi==1.7.1",
    "pyqt5==5.15.11",
    "pyside2==5.15.2.1",
]
